# haskell-paxos

./: Acid.hs  Clustered.hs  DistributedLog.hs  Main.hs  Patchable.hs  Paxos.hs  Slot.hs  paxos.cabal  paxos.hs
browser/: index.html
browser/app/: app.component.ts
browser/paxos/: boot.ts
browser/paxos/components/about/: about.ts
browser/paxos/components/app/: app.html  app.ts
browser/paxos/components/nodes/: nodes.html  nodes.ts
browser/paxos/directives/: routerActive.ts
browser/paxos/factories/: component_proxy.ts
src/: Cluster.hs  ClusterState.hs  Foo.hs  Patchable.hs  Paxos.hs  RestInterface.hs  Server.hs  Slot.hs  Transceiver.hs  UdpTransceiver.hs
src/Control/Distributed/: Acid.hs
