name:                paxos
version:             0.1.0.0
license-file:        LICENSE
author:              Lars Petersen
maintainer:          info@lars-petersen.net
copyright:           Lars Petersen
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:   Foo,
                     Slot,
                     Paxos,
                     Patchable,
                     Cluster,
                     RestInterface,
                     Transceiver,
                     UdpTransceiver,
                     Control.Distributed.Acid
  build-depends:     base <5,
                     containers,
                     bytestring,
                     mtl,
                     servant,
                     servant-server,
                     wai,
                     warp,
                     either,
                     filepath,
                     wai-app-static,
                     http-types,
                     socket

executable paxos
  build-depends:       base, paxos, warp, servant-server, wai, socket
  main-is:             paxos.hs
  default-language:    Haskell2010
